--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         <div class="scorebox" id="score">0</div>
         <button class="button" onclick="newGame()">new game</button>
     </div>
-    <script src="scripts/game.js"></script>
+    <script src="./script/game.js">
+
+    </script>
 </body>
 
 </html>
